<resources>
    <!-- app, activity names and toolbar titles -->
    <string name="app_name">Owni</string>
    <string name="title_activity_people_card_item">PeopleCardItemActivity</string>
    <string name="title_activity_avtivities_card_item">AvtivitiesCardItemActivity</string>
    <string name="people">People</string>
    <string name="Activities">Activities</string>

    <!-- create account and log in  -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="button_create_account">Create account</string>
    <string name="button_signin_with_password">Sign in</string>
    <string name="hint_enter_password">Enter password…</string>
    <string name="hint_enter_email">Enter email…</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with firebase…</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="log_message_auth_successful">Login successful</string>
    <string name="error_message_failed_sign_in_no_network">No network connection</string>
    <string name="error_message_email_issue">Email issues</string>
    <string name="invalid_email">Invalid email</string>
    <string name="hint_enter_username">Enter username…</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_sign_in">Sign in</string>
    <string name="progress_dialog_creating_user_with_firebase">Creating user with Firebase</string>
    <string name="error_invalid_email_not_valid">Invalid email</string>
    <string name="error_invalid_password_not_valid">Password must be at least 6 characters</string>
    <string name="log_error_occurred">error</string>
    <string name="error_email_taken">Email already taken</string>
    <string name="title_activity_login">Login</string>
    <string name="log_out">Log out</string>
    <string name="don_t_have_a_account">Don´t have a account?</string>

    <!-- I owe person/person owe me, simple & with amount and currency -->
    <string name="i_owe_person">I owe %1$s</string>
    <string name="person_owes_me">%1$s owe me</string>
    <string name="i_owe_person_amount_currency">I owe %1$s %2$s %3$s</string>
    <string name="person_owes_me_amount_currency">%1$s owe me %2$s %3$s</string>
    <string name="you_are_squared">You are squared</string>

    <!-- I owe others/others owe me, simple & with amount and currency -->
    <string name="i_owe_other_people_amount_currency">I owe other people %1$s %2$s</string>
    <string name="other_people_owe_me_amount_currency">Other people owe me %1$s %2$s</string>
    <string name="i_owe_someone">I owe someone</string>
    <string name="someone_owe_me">Someone owes me</string>

    <string name="i_owe_other_people">I owe other people</string>
    <string name="other_people_owe_me">Other people owe me</string>


    <string name="content_people_card_item_balance">Balance:</string>
    <string name="currency">kr</string>
    <string name="owes_you">"owe you"</string>
    <string name="you_owe">"You owe"</string>
    <string name="balance_is_0">Balance: 0 </string>
    <string name="add_item">Add item</string>
    <string name="open_swish">Open Swish</string>
    <string name="name_of_person">Name of person</string>
    <string name="describe_item">Describe item</string>
    <string name="amount">Amount</string>
    <string name="kr_st_etc">Kr, st etc.</string>
    <string name="name_of_activity">Name of activity</string>
    <string name="delete_card_and_items">Are you sure you want to delete this card and all its items?</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="delete_card">Delete Card</string>
    <string name="new_peoplecard">Create new Peoplecard</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="new_activitiescard_item">Create new ActivitiesCard item</string>
    <string name="delete_item">Delete item</string>
    <string name="do_you_want_to_delete_item">Are you sure you want to delete this item?</string>
    <string name="new_activitiescard">Create new Activitiescard</string>
    <string name="new_peoplecard_item">Create new PeopleCard item</string>
    <string name="select">Select</string>

    <string-array name="currency">
        <item>Select your currency</item>
        <item>Dollar</item>
        <item>Euro</item>
        <item>Franc</item>
        <item>Krone</item>
        <item>Kronor</item>
        <item>Lira</item>
        <item>Peso</item>
        <item>Pound</item>
        <item>Rupee</item>
        <item>Ruble</item>
        <item>Won</item>
        <item>Yen</item>
    </string-array>

</resources>
