<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.PeopleCardItemActivity.PeopleCardItemActivity"
    tools:showIn="@layout/activity_people_card_item"
    android:background="@android:color/white"
    android:padding="8dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/round_and_title_i_owe">

            <ImageView
                android:layout_width="30dp"
                android:layout_margin="8dp"
                android:layout_height="30dp"
                android:id="@+id/round_i_owe"
                android:src="@drawable/round_red"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/round_i_owe"
                android:layout_toEndOf="@id/round_i_owe"
                android:text="@string/i_owe_person"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:id="@+id/i_owe_people_list_title"/>
        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/round_and_title_i_owe"
            android:id="@+id/i_owe_people_list"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/round_and_title_somone_owe">

            <ImageView
                android:layout_width="30dp"
                android:layout_margin="8dp"
                android:layout_height="30dp"
                android:id="@+id/round_someone_owes"
                android:src="@drawable/round_green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/round_someone_owes"
                android:layout_toEndOf="@id/round_someone_owes"
                android:text="@string/person_owes_me"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:id="@+id/people_owe_me_list_title"/>
        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/round_and_title_somone_owe"
            android:id="@+id/people_owe_me_list"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="30dp"
            android:layout_margin="8dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:id="@+id/round_balance"
            android:src="@drawable/round_blue"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/round_balance"
            android:layout_toEndOf="@id/round_balance"
            android:layout_margin="8dp"
            android:id="@+id/people_card_items_balance"
            android:text=""
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/people_card_items_balance"
            android:layout_toEndOf="@+id/people_card_items_balance"
            android:layout_centerVertical="true"
            android:id="@+id/people_card_item_balance_type"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:text="@string/currency"/>

    </RelativeLayout>

</LinearLayout>



